force-app/main/default/objects/FX_Contract__c/FX_Contract__c.object-meta.xml
<CustomObject>
    <description>Record FX information related to invoice finance deal</description>
    <label>FX Contract</label>
    <nameField>
        <displayFormat>FXC-{000000000}</displayFormat>
        <label>FX Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FX Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>