force-app/main/default/objects/FX_Contract__c/fields/Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_USD__c</fullName>
    <formula>Amount__c * Origination_Rate__c</formula>
    <label>Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>