force-app/main/default/objects/FX_Contract__c/fields/CCY_Target__c.field-meta.xml
<CustomField>
    <fullName>CCY_Target__c</fullName>
    <label>CCY Target</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
                <default>true</default>
                <label>EUR</label>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>HKG</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>