force-app/main/default/objects/FX_Contract__c/fields/External_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Reference__c</fullName>
    <label>External Reference</label>
    <type>TextArea</type>
</CustomField>