force-app/main/default/objects/FX_Contract__c/fields/Origination_Date__c.field-meta.xml
<CustomField>
    <fullName>Origination_Date__c</fullName>
    <label>Origination Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>