force-app/main/default/objects/FX_Contract__c/fields/Origination_Rate__c.field-meta.xml
<CustomField>
    <fullName>Origination_Rate__c</fullName>
    <inlineHelpText>rate convert from allocation CCY to USD</inlineHelpText>
    <label>Origination Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>