force-app/main/default/objects/FX_Contract__c/fields/Remain_amount__c.field-meta.xml
<CustomField>
    <fullName>Remain_amount__c</fullName>
    <inlineHelpText>In Target CCY</inlineHelpText>
    <label>Remain amount CCY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>