force-app/main/default/objects/FX_Contract__c/fields/Remain_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Remain_Amount_USD__c</fullName>
    <formula>Remain_amount__c * Origination_Rate__c</formula>
    <inlineHelpText>In Origin CCY</inlineHelpText>
    <label>Remain Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>