force-app/main/default/objects/FX_Contract__c/fields/Sum_Deposit_Withdrawal_USD__c.field-meta.xml
<CustomField>
    <fullName>Sum_Deposit_Withdrawal_USD__c</fullName>
    <label>Sum Deposit Withdrawal USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>