force-app/main/default/objects/FX_Contract__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <inlineHelpText>for swap only</inlineHelpText>
    <label>Termination Date</label>
    <type>DateTime</type>
</CustomField>