force-app/main/default/objects/FX_Contract__c/fields/Termination_Rate__c.field-meta.xml
<CustomField>
    <fullName>Termination_Rate__c</fullName>
    <inlineHelpText>for swap only</inlineHelpText>
    <label>Termination Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>