force-app/main/default/objects/FX_Contract__c/fields/Tranche_Name__c.field-meta.xml
<CustomField>
    <fullName>Tranche_Name__c</fullName>
    <formula>TEXT(CCY_Target__c) +&quot;-&quot;+ TEXT(Tranche_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tranche Name</label>
    <type>Text</type>
</CustomField>