force-app/main/default/objects/FX_Contract__c/fields/Tranche_Number__c.field-meta.xml
<CustomField>
    <fullName>Tranche_Number__c</fullName>
    <label>Tranche  Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>