force-app/main/default/objects/FX_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tranche_Name__c</columns>
    <columns>CCY_Target__c</columns>
    <columns>Amount__c</columns>
    <columns>Remain_amount__c</columns>
    <columns>Remain_Amount_USD__c</columns>
    <columns>Origination_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>